solc_ossfuzz_seed_corpus/test_sol/test_6ad4cd34b94c0a1d28fb711fa70df1ff4ebcbbcfb3cda6a1b2492a7851cd2c68_de68c7e326906418c8d6586d05507ab1e1521e69_sol.sol
==== Source:  ====

==== Source: su0.sol ====
struct St0 {
  mapping(int80 => address) el0;
  uint208[][][] el1;
}
contract C0 {
  fallback() external   
  {
    unchecked {
      uint48[10] storage l0;
      int56 l1 = (-(int56(0)));
      (l0[uint256(0)], l0[(((true ? (uint256(0) * uint256(115792089237316195423570985008687907853269984665640564039457584007913129639935)) : uint256(42323661781482115207806342681393760792961207055148034877240470416484749690564)) ^ uint256(115792089237316195423570985008687907853269984665640564039457584007913129639935)) ^ uint256(115792089237316195423570985008687907853269984665640564039457584007913129639935))]) = (uint48(281474976710655), ((((false ? uint48(281474976710655) : uint48(281474976710655)) - uint48(64187777503504)) & uint48(0)) << uint128(uint128(198587090324036359194420965735337893885))));
      assert(l0[uint256(0)] == uint48(281474976710655));
      assert(l0[(((true ? (uint256(0) * uint256(115792089237316195423570985008687907853269984665640564039457584007913129639935)) : uint256(42323661781482115207806342681393760792961207055148034877240470416484749690564)) ^ uint256(115792089237316195423570985008687907853269984665640564039457584007913129639935)) ^ uint256(115792089237316195423570985008687907853269984665640564039457584007913129639935))] == ((((false ? uint48(281474976710655) : uint48(281474976710655)) - uint48(64187777503504)) & uint48(0)) << uint128(uint128(198587090324036359194420965735337893885))));
      {
        function () internal   returns (int64, bool) l2;
        function () external   returns (bool, bool, bool) l3;
        (bool l4, bool l5, bool l6) = l3();
        (l0[uint256(0)]) = ((uint48(188994316381079) - (uint48(83783833476180) ^ (uint48(0) + uint48(0)))));
        assert(l0[uint256(0)] == (uint48(188994316381079) - (uint48(83783833476180) ^ (uint48(0) + uint48(0)))));
        (bool l7, bool l8, bool l9) = l3();
        delete l0[uint256((int256((((uint256(98671513250147539651638534676254079786982290904366895348222119944128986798628) * uint256(0)) | uint256(86843824772500926249330009722484509917510062405645505099124109941532019169928)) + uint256(0))) ^ int256(0)))];
        uint136 l10 = uint136(67825874438494364843398403048969603731754);
      }
      bytes29 l11 = bytes29(0xdba9773a4fc4540e6ee27c2854d9a02caf4ba9e66d9ead8de5e1fb3ffe);
      l0[uint256(113670807549244547869901836052982652424930690289504426987913160586925330560627)] >>= (((((uint48(187651072476269) + uint48(281474976710655)) >> uint48(uint48(172367534622030))) - uint48(281474976710655)) << uint16(uint16(65535))) | uint48(0));
      function (function () external  , bool[7] memory) external   returns (bool, bool[6] memory, bool) l12;
    }
    { }
  }
  bool   s0 = false;
  uint240  public s1;
  constructor(uint240 i0)   {
    s1 |= uint240(1766847064778384329583297500742918515827483896875618958121606201292619775);
    { }
  }
}
pragma solidity >= 0.0.0;
// ----
// Warning 3149: (su0.sol:631-792): The result type of the shift operation is equal to the type of the first operand (uint48) ignoring the (larger) type of the second operand (uint128) which might be unexpected. Silence this warning by either converting the first or the second operand to the type of the other.
// Warning 3149: (su0.sol:1259-1420): The result type of the shift operation is equal to the type of the first operand (uint48) ignoring the (larger) type of the second operand (uint128) which might be unexpected. Silence this warning by either converting the first or the second operand to the type of the other.
// TypeError 3464: (su0.sol:196-198): This variable is of storage pointer type and can be accessed without prior assignment, which would lead to undefined behaviour.
// TypeError 3464: (su0.sol:212-214): This variable is of storage pointer type and can be accessed without prior assignment, which would lead to undefined behaviour.
// TypeError 3464: (su0.sol:809-811): This variable is of storage pointer type and can be accessed without prior assignment, which would lead to undefined behaviour.
// TypeError 3464: (su0.sol:866-868): This variable is of storage pointer type and can be accessed without prior assignment, which would lead to undefined behaviour.
// TypeError 3464: (su0.sol:1604-1606): This variable is of storage pointer type and can be accessed without prior assignment, which would lead to undefined behaviour.
// TypeError 3464: (su0.sol:1719-1721): This variable is of storage pointer type and can be accessed without prior assignment, which would lead to undefined behaviour.
// TypeError 3464: (su0.sol:1877-1879): This variable is of storage pointer type and can be accessed without prior assignment, which would lead to undefined behaviour.
// TypeError 3464: (su0.sol:2300-2302): This variable is of storage pointer type and can be accessed without prior assignment, which would lead to undefined behaviour.
